fixes wrapping issue with select arrow

--- a/source/tags/FormSelect/FormSelect.css
+++ b/source/tags/FormSelect/FormSelect.css
@@ -2,6 +2,7 @@
 	@apply --form-border;
 	max-width: 320px;
 	padding: 1px;
+	white-space: nowrap;
 }
 
 /* control element and modifiers */
@@ -24,7 +25,7 @@
 /* icon element */
 .form-select__icon {
 	line-height: 1.5;
-	margin-left: -1.2em;
+	margin-left: -1.5em;
 	pointer-events: none;
 	vertical-align: middle;
 }
